# PRAGMA-G

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  DATASETS.md  Dockerfile  INTERVIEWS.md  Makefile  PLAN.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  deploy.yml
configs/: pragma_s.yaml
monitoring/: prometheus.yml
monitoring/grafana/dashboards/: dashboard.yml  pragma_g.json
monitoring/grafana/datasources/: datasource.yml
scripts/: build_vocab.py  compare_models.py  download_data.sh  evaluate.py  init_db.sql  stream_consumer.py  stream_producer.py
src/api/: main.py  model_loader.py  schemas.py
src/graph/: graph_builder.py  graphsage.py
src/model/: classifier.py  embeddings.py  event_encoder.py  history_encoder.py  pragma_mini.py  profile_encoder.py
src/monitoring/: drift.py  metrics.py
src/tokenizer/: tokenizer.py  vocab.py
src/training/: baseline.py  dataset.py  finetune.py  losses.py  metrics.py  pretrain.py  registry.py
src/ui/: app.py
tests/: conftest.py  test_api.py  test_drift.py  test_finetune.py  test_graph.py  test_model.py  test_registry.py  test_tokenizer.py  test_training.py  test_ui.py
